--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                                 </li>
                                 <li>
                                     <a href="/Admin/Order/Charging">
-                                        شارژ حساب 
+                                        شارژ حساب
                                     </a>
                                 </li>
                             </ul>
@@ -155,7 +155,7 @@
                                 <span class="title"> اطلاعات ارسالی کاربران</span>
                             </a>
                         </li>
-                      
+
                         <li class="nav-item active">
                             <a href="/Admin/Ticket">
                                 <span class="icon-holder">
@@ -172,7 +172,14 @@
                                 <span class="title">چت ها</span>
                             </a>
                         </li>
-
+                        <li class="nav-item active">
+                            <a href="/LogOff">
+                                <span class="icon-holder">
+                                    <i class="fas fa-power-off pr-1"></i>
+                                </span>
+                                <span class="title"> خروج</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -189,48 +196,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <ul class="nav-left float-left">
-                            <li class="user-profile dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <div class="user-info">
-                                        <span class="name pr-1"></span>
-                                        <img height="50" width="50" />
-                                        <i class="fas fa-chevron-down font-size-10"></i>
-                                    </div>
-                                </a>
-                                <ul class="dropdown-menu">
-
-                                    <li role="separator" class="divider"></li>
-                                    <li>
-                                        <a href="/LogOff">
-                                            <i class="fas fa-power-off pr-1"></i>
-                                            <span>خروج</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="notifications dropdown ">
-                                <span class="counter">5</span>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fas fa-bell"></i>
-                                </a>
-                                <ul class="dropdown-menu ">
-                                    <li class="notice-header">
-                                        <i class="fas fa-bell pr-1"></i>
-                                        <span>پیشنهادات</span>
-                                    </li>
-                                    <li>
-                                        <ul class="list-info overflow-y-auto relative scrollable">
-                                        </ul>
-                                    </li>
-                                    <li class="notice-footer">
-                                        <span>
-                                            <a href="/admin/proposal" class="text-gray">مشاهده همه پیشنهادات<i class="ei-right-chevron pl-1 font-size-10"></i></a>
-                                        </span>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
+       
 
                     </div>
                 </div>
