--- a/AminWeb/Areas/Admin/Views/User/Edit.cshtml
+++ b/AminWeb/Areas/Admin/Views/User/Edit.cshtml
@@ -14,6 +14,7 @@
         @Html.HiddenFor(m=>m.DocsId)
         @Html.HiddenFor(m=>m.Password)
         @Html.HiddenFor(m=>m.IsActive)
+        @Html.HiddenFor(m=>m.IsFeeFree)
         <div class="card-body">
             <div class="form-group mx-sm-1 mb-2">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "نام" } })
