--- a/AminWeb/Areas/User/Views/Classes/Create.cshtml
+++ b/AminWeb/Areas/User/Views/Classes/Create.cshtml
@@ -40,20 +40,22 @@
             </span>
         </div>
         <div class="form-group">
-            <label for="Playlist">کلاس</label>
+            <label for="Playlist">دسته</label>
             <div class="row-reverse">
-                @Html.DropDownListFor(model => model.CatagoryId, (IEnumerable<SelectListItem>)ViewBag.CatagoryId, "دسته ", htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left", dir = "rtl" })
+                @Html.DropDownListFor(model => model.CatagoryId, (IEnumerable<SelectListItem>)ViewBag.CatagoryId, "دسته ", htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left showCategory", dir = "rtl" })
             </div>
             @Html.ValidationMessageFor(model => model.CatagoryId, "", new { @class = "uk-text-danger" })
         </div>
+        <div class="form-group" id="catList">
+        </div>
         @*<div class="uk-margin-top uk-margin-bottom">
-            <label dir="rtl">
-                @Html.EditorFor(m => m.IsCharity)
-                میخواهم درصدی از درامد ویدیو های این کلاس به خیریه
-                <a href="#" class="blue">نام خیریه</a>
-                اهدا شود
-            </label>
-        </div>*@
+                <label dir="rtl">
+                    @Html.EditorFor(m => m.IsCharity)
+                    میخواهم درصدی از درامد ویدیو های این کلاس به خیریه
+                    <a href="#" class="blue">نام خیریه</a>
+                    اهدا شود
+                </label>
+            </div>*@
         <div class="form-group">
             <label for="Certificate">عکس کلاس</label>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
@@ -90,3 +92,21 @@
     }
 
 </div>
+
+<script>
+    $(document).ready(function () {
+        $(".showCategory").change(function () {
+            var id = $(".showCategory option:selected").val();
+            if (id != "") {
+                $("#overlay").fadeIn(300);
+                $.get('/User/Classes/ShowCategory/' + id, function (result) {
+                    $('#catList').html(result);
+                    $("#overlay").fadeOut(300);
+                });
+            }
+            else {
+                $('#catList').html("");
+            }
+        });
+    });
+</script>
