--- a/AminWeb/Areas/User/Views/Classes/Edit.cshtml
+++ b/AminWeb/Areas/User/Views/Classes/Edit.cshtml
@@ -14,6 +14,8 @@
         @Html.HiddenFor(m => m.IsHome)
         @Html.HiddenFor(m => m.Link)
         @Html.HiddenFor(m => m.CertificateURL)
+        @Html.HiddenFor(m => m.CatagoryChildsId)
+        @Html.HiddenFor(m => m.CatagoryId)
         @Html.HiddenFor(m => m.ViewCount)
         @Html.HiddenFor(m => m.UserId)
         @Html.HiddenFor(m => m.DateSubmited)
@@ -49,21 +51,23 @@
             </span>
         </div>
         <div class="form-group">
-            <label for="Playlist">کلاس</label>
+            <label for="Playlist">دسته</label>
             <div class="row-reverse">
-                @Html.DropDownList("CatagoryId", null, htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left", dir = "rtl" })
+                @Html.DropDownList("Catagory", null, htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left showCategory", dir = "rtl" })
             </div>
             @Html.ValidationMessageFor(model => model.CatagoryId, "", new { @class = "uk-text-danger" })
         </div>
+        <div class="form-group" id="catListEdit">
+        </div>
         @*<div class="uk-margin-top uk-margin-bottom">
-            <label dir="rtl">
-                @Html.EditorFor(m => m.IsCharity)
-                میخواهم درصدی از درامد ویدیو های این کلاس به خیریه
-                <a href="#" class="blue">نام خیریه</a>
-                اهدا شود
-            </label>
-            @Html.ValidationMessageFor(model => model.IsCharity, "", new { @class = "uk-text-danger" })
-        </div>*@
+                <label dir="rtl">
+                    @Html.EditorFor(m => m.IsCharity)
+                    میخواهم درصدی از درامد ویدیو های این کلاس به خیریه
+                    <a href="#" class="blue">نام خیریه</a>
+                    اهدا شود
+                </label>
+                @Html.ValidationMessageFor(model => model.IsCharity, "", new { @class = "uk-text-danger" })
+            </div>*@
         <div class="form-group">
             <label for="Certificate">عکس کلاس</label>
             <div class="row-reverse">
@@ -112,3 +116,35 @@
     }
 
 </div>
+
+
+<script>
+    $(document).ready(function () {
+        var id = $(".showCategory option:selected").val();
+        if (id != "") {
+            $.get('/User/Classes/ShowCategory/' + id, function (result) {
+                $('#catListEdit').html(result);
+            });
+           
+        }
+        else {
+            $('#catListEdit').html("");
+            $("#CatagoryId").val("");
+        }
+        $(".showCategory").change(function () {
+            var id = $(".showCategory option:selected").val();
+            if (id != "") {
+                $("#CatagoryId").val(id);
+                $("#overlay").fadeIn(300);
+                $.get('/User/Classes/ShowCategory/' + id, function (result) {
+                    $('#catListEdit').html(result);
+                    $("#overlay").fadeOut(300);
+                });
+            }
+            else {
+                $('#catListEdit').html("");
+                $("#CatagoryId").val("");
+            }
+        });
+    });
+</script>
