--- a/AminWeb/Areas/User/Views/Video/ShowPlaylist.cshtml
+++ b/AminWeb/Areas/User/Views/Video/ShowPlaylist.cshtml
@@ -23,8 +23,7 @@
 
 <script>
     $(document).ready(function () {
-        $('#playlistChildId').val($('#PlaylistId').val());
-        alert($('#PlaylistId').val());
+        $('.showUnderPlaylist').val($('#PlaylistId').val());
         $(".showUnderPlaylist").change(function () {
             var id = $(".showUnderPlaylist option:selected").val();
             if (id != "") {
