--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -61,8 +61,8 @@
                 <a role="listitem" href="/Home/Rules" class="lesser">قوانین</a>
             </div>
         </nav>
-        <a class="logo" href="/">
-            <img src="~/Resources/Static/Vector/Logo.svg" width="50" height="50" alt="Logo" />
+        <a class="logo" href="/" uk-tooltip="Title:دانشسرا">
+            <img src="~/Resources/Static/Vector/Logo.svg" width="54" height="54" alt="Logo" />
         </a>
     </header>
 
@@ -78,6 +78,13 @@
                 <!-- #endregion -->
             </div>
         </div>
+    </div>
+
+    <div class="credits">
+        <p>
+            طراحی و توسعه توسط شرکت
+            <a href="https://arvintavco.com">آروین تاو</a>
+        </p>
     </div>
 
     <nav class="bottom-nav">
@@ -109,8 +116,7 @@
         </ul>
     </nav>
 
-    <div role="none" class="space-bottom-nav uk-margin-xlarge-bottom"></div>
-
+    <div role="none" class="space-bottom-nav uk-margin-large-bottom"></div>
 
     <div id="Modal-Charge" uk-modal>
         <form action="/ShopCart/ChargeBalance" class="uk-modal-dialog uk-modal-body">
