--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -456,18 +456,19 @@ a:hover, summary:hover, .active {
     padding: 8px;
     position: absolute; }
     .video-block .top .badges > li, .uk-slider-items .video-block .top .badges > li {
-      padding: 6px;
-      margin-right: 8px;
-      background: #fff;
-      -moz-border-radius: 12px 12px 12px 12px;
-      -webkit-border-radius: 12px 12px 12px 12px;
-      border-radius: 12px 12px 12px 12px;
+      padding: 4px;
+      margin-right: 6px;
+      background: rgba(165, 165, 165, 0.28);
+      backdrop-filter: blur(4px);
+      -moz-border-radius: 11px 11px 11px 11px;
+      -webkit-border-radius: 11px 11px 11px 11px;
+      border-radius: 11px 11px 11px 11px;
       /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;*/ }
       .video-block .top .badges > li > img, .uk-slider-items .video-block .top .badges > li > img {
-        height: 24px;
-        width: 24px; }
+        height: 22px;
+        width: 22px; }
   .video-block .top .thumbnail, .uk-slider-items .video-block .top .thumbnail {
     height: 200px;
     -moz-border-radius: 7px 7px 0 0;
@@ -1039,3 +1040,28 @@ select {
     -webkit-border-radius: 0;
     border-radius: 0;*/
       color: #F94646; }
+
+.credits {
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin-top: 64px; }
+  .credits p {
+    margin: 0;
+    width: 100%;
+    color: #b5b5b5;
+    font-size: 12px;
+    text-align: center; }
+    .credits p a {
+      color: #afafaf;
+      font-weight: 600;
+      -moz-transition: all ease 0.2s;
+      -o-transition: all ease 0.2s;
+      -webkit-transition: all ease 0.2s;
+      transition: all ease 0.2s; }
+    .credits p a:hover {
+      color: #F94646; }
+
+@media only screen and (max-width: 764px) {
+  .credits {
+    margin-bottom: 96px; } }
