--- a/AminWeb/Views/Home/Index.cshtml
+++ b/AminWeb/Views/Home/Index.cshtml
@@ -142,13 +142,13 @@
                 $("#loader").fadeOut(300);
             });
         }
-        if (selectByCategory(localStorage.getItem('searchcat')) !== true) {
+      //  if (selectByCategory(localStorage.getItem('searchcat')) !== true) {
             $("#loader").fadeIn(300);
-            // agar
+
             $.get('/Video/SelectVideos', function (result) {
                 $('#listVideo').html(result);
                 $("#loader").fadeOut(300);
             });
-        }
+       // }
     </script>
 }
