--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             <div class="side-nav" style="z-index:8500">
                 <div class="side-nav-inner">
                     <div class="side-nav-logo">
-                        <a href="#">
+                        <a href="/">
                             <img class="logo logo-dark" width="24" height="24" src="~/Resources/Static/Vector/Logo.svg" />
                             <!--<div class="logo logo-dark" style="background-image: url('/img/admin/logo/logo.png')"></div>-->
                         </a>
